--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -5,6 +5,18 @@ Cart
 {% endblock %}
 
 {% block content %}
+{% if not cart_items %}
+<div class="text-center">
+	<br>
+	<h1 class="text-center product_title">
+		Your shopping cart is empty
+	</h1>
+	<br>
+	<p class="text-center">
+		Please click <a href="{% url 'home' %}">here</a> to continue eshopping 
+	</p>
+</div>
+{% else %}
 
 <div class="text-center">
 	<br>
@@ -14,46 +26,53 @@ Cart
 </div>
 <div class="row mx-auto">
 	<div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center">
-		<table class="table">
-			<thead>
+		<table class="table cart_table">
+			<thead class="cart_thead">
 				<tr>
 					<th colspan="4">
 						Your Items
 					</th>
 				</tr>
 			</thead>
-			{% for i in '123' %}
+			{% for cart_item in cart_items %}
 			<tr>
 				<td>
-					<a href="">
-					<img src="{% static 'img/product-1.png' %}" width="100" height="100" alt="">
+					<a href="{{cart_item.product.get_url}}">
+					<img src="{{cart_item.product.image.url}}" width="100" height="100" alt="">
 					</a>
 				</td>
 				<td class="text-left">
-					Galaxy s9
+					{{cart_item.product.name}}
 					<br>
-					SKU: 5
+					SKU: {{cart_item.product.id}}
 					<br>
-					Unit Price: $300
+					Unit Price: ${{cart_item.product.price}}
 					<br>
-					Qty: 2 x $300
+					Qty: {{cart_item.quantity}} x ${{cart_item.product.price}}
 				</td>
 				<td>
-					$600
+					${{cart_item.sub_total}}
 				</td>
+				{% if cart_item.quantity < cart_item.product.stock %}
 				<td>
-					&nbsp<a href=""><i class="fas fa-plus-circle"></i></a>
-					&nbsp<a href=""><i class="fas fa-minus-circle"></i></a>
-					&nbsp<a href=""><i class="fas fa-trash-alt"></i></a>
+					&nbsp<a href="{% url 'add_cart' cart_item.product.id %}"><i class="fas fa-plus-circle cart_icon"></i></a>
+					&nbsp<a href=""><i class="fas fa-minus-circle cart_icon"></i></a>
+					&nbsp<a href=""><i class="fas fa-trash-alt cart_icon"></i></a>
 				</td>
+				{% else %}
+				<td>
+					&nbsp<a href=""><i class="fas fa-minus-circle cart_icon"></i></a>
+					&nbsp<a href=""><i class="fas fa-trash-alt cart_icon"></i></a>
+				</td>
+				{% endif %}
 			</tr>
 			{% endfor %}
 		</table>
 
 	</div>
 	<div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center">
-		<table class="table">
-			<thead>
+		<table class="table cart_table">
+			<thead class="cart_thead">
 				<tr>
 					<th colspan="4">
 						Check out
@@ -68,19 +87,20 @@ Cart
 				</tr>
 				<tr>
 					<td class="text-left">
-						Your total is: <strong>$600</strong>
+						Your total is: <strong>${{ total }}</strong>
 					</td>
 				</tr>
 			</tbody>
 		</table>
 		<div class="mx-auto">
-			<a href="" style="text-decoration: none;">
+			<a href="{% url 'home' %}" style="text-decoration: none;">
 				<button type="button" class="btn btn-lg btn-block btn-dark text-white">Continue Shopping</button>
 			</a>
 		</div>
 	</div>
-
 </div>
+
+{% endif %}
 {% endblock %}
 
 
