--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -56,13 +56,13 @@ Cart
 				{% if cart_item.quantity < cart_item.product.stock %}
 				<td>
 					&nbsp<a href="{% url 'add_cart' cart_item.product.id %}"><i class="fas fa-plus-circle cart_icon"></i></a>
-					&nbsp<a href=""><i class="fas fa-minus-circle cart_icon"></i></a>
-					&nbsp<a href=""><i class="fas fa-trash-alt cart_icon"></i></a>
+					&nbsp<a href="{% url 'cart_remove' cart_item.product.id %}"><i class="fas fa-minus-circle cart_icon"></i></a>
+					&nbsp<a href="{% url 'cart_remove_product' cart_item.product.id %}"><i class="fas fa-trash-alt cart_icon"></i></a>
 				</td>
 				{% else %}
 				<td>
-					&nbsp<a href=""><i class="fas fa-minus-circle cart_icon"></i></a>
-					&nbsp<a href=""><i class="fas fa-trash-alt cart_icon"></i></a>
+					&nbsp<a href="{% url 'cart_remove' cart_item.product.id %}"><i class="fas fa-minus-circle cart_icon"></i></a>
+					&nbsp<a href="{% url 'cart_remove_product' cart_item.product.id %}"><i class="fas fa-trash-alt cart_icon"></i></a>
 				</td>
 				{% endif %}
 			</tr>
